--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -22,7 +22,7 @@
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3 text-light">&copy; {{ $.Site.Params.Copyright }} {{ now.Format "2006"}}
     {{ with $.Site.Params.BuiltWith -}}
-    &middot; Build with <a class="text-warning" href="https://gohugo.io/" target="_blank">Hugo</a> & <a class="text-warning" href="https://themes.gohugo.io/soho/" target="_blank">Padma</a> theme
+    &middot; Build with <a class="text-warning" href="https://gohugo.io/" target="_blank">Hugo</a> & <a class="text-warning" href="https://github.com/suvashsumon/Padma" target="_blank">Padma</a> theme
     {{- end }}
   </div>
   <!-- Copyright -->
